--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
@@ -6,17 +6,19 @@
     <div class="page-header">
         <h1>
             {{ 'Content' | trans({}, 'ZymNodeBundle') }}
-            
+
             <small>{{ 'Manage content' | trans({}, 'ZymNodeBundle') }}</small>
         </h1>
     </div>
 
-    <div class="btn-group">
-        {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\Node']) %}
-        <a  class="btn" href="{{ path('zym_nodes_add') }}">{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
-        {% endif %}
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\Node']) %}
+            <a  class="btn" href="{{ path('zym_nodes_add') }}">{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
+            {% endif %}
+        </div>
     </div>
-    
+
     <table class="striped-table">
         <thead>
             <tr>
@@ -26,7 +28,7 @@
                 <th>{{ 'Actions' |trans({}, 'ZymNodeBundle') }}</th>
             </tr>
         </thead>
-        
+
         <tbody>
             {% for node in nodes %}
             <tr>
@@ -38,13 +40,13 @@
                         {% if is_granted('VIEW', node) %}
                         <a class="btn" href="{{ path('zym_nodes_node', { 'id': node.id })}}">{{ 'View' | trans({}, 'ZymNodeBundle') }}</a>
                         {% endif %}
-                        
+
                         {% if is_granted('EDIT', node) %}
                         <a class="btn" href="{{ path('zym_nodes_edit', { 'id': node.id })}}">
                             {{ 'Edit' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
-                        
+
                         {% if is_granted('DELETE', node) %}
                         <a class="btn" href="{{ path('zym_node_nodes_delete', { 'id': node.id })}}"  data-toggle="ajax-modal">
                             {{ 'Delete' | trans({}, 'ZymNodeBundle') }}
@@ -56,16 +58,16 @@
             {% endfor %}
         </tbody>
     </table>
-    
+
     {% if nodes | length <= 0 %}
         <p>
             {{ 'No content added yet.' | trans({}, 'ZymNodeBundle') }}
-            
+
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\Node']) %}
             <a class="" href="{{ path('zym_nodes_add') }}">{{ 'Create new content.' | trans({}, 'ZymNodeBundle') }}</a>
             {% endif %}
         </p>
     {% endif %}
-    
-    {{ nodes.render() |raw }}    
+
+    {{ nodes.render() |raw }}
 {% endblock content %}
