--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/list.html.twig
@@ -9,13 +9,13 @@
             <small>Manage roles</small>
         </h1>
     </div>
-    
+
     <p>
-        Roles allow you to fine tune the security and administration of Zym. A role defines a 
-        group of users that have certain privileges as defined on the permissions page. 
-        Examples of roles include: anonymous user, authenticated user, moderator, administrator 
-        and so on. In this area you will define the names and order of the roles on your site. 
-        It is recommended to order your roles from least permissive (anonymous user) to most 
+        Roles allow you to fine tune the security and administration of Zym. A role defines a
+        group of users that have certain privileges as defined on the permissions page.
+        Examples of roles include: anonymous user, authenticated user, moderator, administrator
+        and so on. In this area you will define the names and order of the roles on your site.
+        It is recommended to order your roles from least permissive (anonymous user) to most
         permissive (administrator). To delete a role choose "edit role".
     </p>
 
@@ -25,13 +25,15 @@
         Anonymous user: this role is used for users that don't have a user account or that are not authenticated.
         Authenticated user: this role is automatically granted to all logged in users.
     </p>
-    
-    <div class="btn-group">
-        {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclSecurityIdentity']) %}
-        <a  class="btn" href="{{ path('zym_security_acl_roles_add') }}">{{ 'New Role' | trans({}, 'ZymSecurityBundle') }}</a>
-        {% endif %}
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclSecurityIdentity']) %}
+            <a  class="btn" href="{{ path('zym_security_acl_roles_add') }}">{{ 'New Role' | trans({}, 'ZymSecurityBundle') }}</a>
+            {% endif %}
+        </div>
     </div>
-    
+
     <table class="striped-table">
         <thead>
             <tr>
@@ -41,7 +43,7 @@
                 <th>{{ 'Actions' |trans({}, 'ZymSecurityBundle') }}</th>
             </tr>
         </thead>
-        
+
         <tbody>
             {% for role in roles %}
             <tr>
@@ -49,16 +51,16 @@
                 <td>{{ role.identifier |e }}</td>
                 <td>{{ role.username ? 'User' : 'Role' |e }}</td>
                 <td>
-                    <div class="btn-group">   
+                    <div class="btn-group">
                         {% if is_granted('DELETE', role) %}
                         <a class="btn" href="{{ path('zym_security_acl_roles_delete', { 'id': role.id })}}" data-toggle="ajax-modal">{{ 'Delete' |trans({}, 'ZymSecurityBundle') }}</a>
-                        {% endif %}                     
+                        {% endif %}
                     </div>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    
+
     {{ roles.render() |raw }}
 {% endblock content %}
