--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/list.html.twig
@@ -9,11 +9,13 @@
             <small>{{ 'Manage users' | trans({}, 'ZymUserBundle') }}</small>
         </h1>
     </div>
-    
-    <div class="btn-group">
-        {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\UserBundle\\Entity\\User']) %}
-        <a class="btn" href="{{ path('zym_user_users_create') }}" class="button">{{ 'Add User' | trans({}, 'ZymUserBundle') }}</a>
-        {% endif %}
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\UserBundle\\Entity\\User']) %}
+            <a class="btn" href="{{ path('zym_user_users_create') }}" class="button">{{ 'Add User' | trans({}, 'ZymUserBundle') }}</a>
+            {% endif %}
+        </div>
     </div>
 
     <table class="striped-table">
@@ -26,7 +28,7 @@
                 <th>{{ 'Actions' | trans({}, 'ZymUserBundle') }}</th>
             </tr>
         </thead>
-        
+
         <tbody>
             {% for user in users %}
             <tr>
@@ -39,11 +41,11 @@
                         {% if is_granted('VIEW', user) %}
                         <a class="btn" href="{{ path('zym_user_users_show', { 'id': user.id }) }}">{{ 'View' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
-                        
+
                         {% if is_granted('EDIT', user) %}
                         <a class="btn" href="{{ path('zym_user_users_edit', { 'id': user.id }) }}">{{ 'Edit' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
-                        
+
                         {% if is_granted('DELETE', user) %}
                         <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}" class="button">{{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
@@ -53,6 +55,6 @@
             {% endfor %}
         </tbody>
     </table>
-    
+
     {{ users.render() |raw }}
 {% endblock %}
