--- a/src/Zym/Bundle/MenuBundle/Resources/views/Categories/list.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Categories/list.html.twig
@@ -9,11 +9,15 @@
             <small></small>
         </h1>
     </div>
-    
+
     <div class="row">
         {% for child in menuItem.children %}
         <div class="span6">
+            {% if child.hasChildren %}
             <h2><a href="{{ child.uri }}">{{ child.label }}</a></h2>
+            {% else %}
+            <a href="{{ child.uri }}">{{ child.label }}</a>
+            {% endif %}
             <ul>
                 {% for c in child.children %}
                 <li>
