--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
@@ -11,12 +11,14 @@
         </h1>
     </div>
 
+    <div class="well">
     <div class="btn-toolbar">
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\Node']) %}
-            <a  class="btn" href="{{ path('zym_nodes_add') }}">{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
+            <a  class="btn" href="{{ path('zym_nodes_add') }}" data-toggle="ajax-modal"><i class="plus"></i>{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
             {% endif %}
         </div>
+    </div>
     </div>
 
     <table class="striped-table">
