--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/add.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/add.html.twig
@@ -6,12 +6,13 @@
     <div class="page-header">
         <h1>{{ 'New Access Rule' |trans({}, 'ZymSecurityBundle') }}</h1>
     </div>
-    
-    <form action="" method="post" {{ form_enctype(form) }}>
+
+    <form class="horizontal-form" action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
-    
+
         <fieldset class="form-actions">
             <input class="btn primary"  type="submit" value="{{ 'Create' | trans({}, 'ZymSecurityBundle') }}" />
+            <a class="btn" href="{{ path('zym_security_access_rules') }}">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</a>
         </fieldset>
     </form>
 {% endblock content %}
