--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
@@ -10,27 +10,138 @@
         </h1>
     </div>
 
-    <div class="btn-group">
-        <a class="btn" href="{{ path('zym_user_users') }}">Users</a>
-    
-        {% if is_granted('EDIT', user) %}
-        <a class="btn" href="{{ path('zym_user_users_edit', { "id": user.id }) }}">{{ 'Edit' | trans({}, 'ZymUserBundle') }}</a>
-        {% endif %}
-    
-        {% if is_granted('DELETE', user) %}
-        <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}">{{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
-        {% endif %}
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_user_users') }}"><i class="arrow-left"></i> Users</a>
+        </div>
+
+        <div class="btn-group">
+            {% if is_granted('EDIT', user) %}
+            <a class="btn" href="{{ path('zym_user_users_edit', { "id": user.id }) }}">
+                <i class="edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}
+            </a>
+            {% endif %}
+
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="off"></i> {{ 'Disable User' | trans({}, 'ZymUserBundle') }}</a>
+                </li>
+                <li>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="lock"></i> {{ 'Activate User' | trans({}, 'ZymUserBundle') }}</a>
+                </li>
+
+
+                {% if is_granted('DELETE', user) %}
+                <li class="divider"></li>
+
+                <li>
+                    <a href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal">
+                        <i class="remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+
+       <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                More... <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="{{ path('fos_user_resetting_request', { "username": user.username }) }}"><i class="envelope"></i> {{ 'Send password' | trans({}, 'ZymUserBundle') }}</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="btn-group">
+            {% if is_granted('ROLE_ALLOWED_TO_SWITCH', user) %}
+            <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id, "_switch_user": user.username }) }}">
+                <i class="user"></i> {{ 'Login as User' | trans({}, 'ZymUserBundle') }}
+            </a>
+            {% endif %}
+        </div>
     </div>
 
-    <br />
-    First Name:{{ user.firstName }}<br />
-    Last Name: {{ user.lastName }}<br />
-    Email: {{ user.email }}<br />
-    Enabled: {{ user.enabled ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
-    Locked: {{ user.locked ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
-   {#} CreatedAt: {{ user.createdAt.format(constant('DateTime::ISO8601')) }}<br />
-    UpdatedAt: {{ user.updatedAt.format(constant('DateTime::ISO8601')) }}<br />#}
-    Last Login:{{ user.lastLogin ? user.lastLogin.format(constant('DateTime::ISO8601')) : 'Never' }}<br />
-    Expired: {{ user.expired ? 'Yes' : 'No' | trans({}, 'ZymUserBundle') }}<br />
-    Roles: {{ user.roles|join(', ') }}<br />
+    <div class="page-header">
+        <h2>
+            Profile
+            <small>Information about this user</small>
+        </h2>
+    </div>
+
+    <div class="row">
+        <div class="span6">
+            <dl>
+                {% if user.firstName is defined and user.lastName is defined %}
+                    <dt>First Name</dt>
+                    <dd>{{ user.firstName |e }}</dd>
+                    <dt>Last Name</dt>
+                    <dd>{{ user.lastName |e }}</dd>
+                {% elseif user.fullName is defined %}
+                    <dt>Name</dt>
+                    <dd>{{ user.fullName |e }}</dd>
+                {% endif %}
+
+                {% if user.username != user.email %}
+                    <dt>Username</dt>
+                    <dd>{{ user.username |e }}</dd>
+                {% endif %}
+
+                <dt>Email</dt>
+                <dd><a href="mailto:{{ user.email |url_encode }}">{{ user.email |e }}</a></dd>
+            </dl>
+        </div>
+
+        <div class="span6">
+            Enabled: {{ user.enabled ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
+            Locked: {{ user.locked ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
+           {#} CreatedAt: {{ user.createdAt.format(constant('DateTime::ISO8601')) }}<br />
+            UpdatedAt: {{ user.updatedAt.format(constant('DateTime::ISO8601')) }}<br />#}
+            Last Login:{{ user.lastLogin ? user.lastLogin.format(constant('DateTime::ISO8601')) : 'Never' }}<br />
+            Expired: {{ user.expired ? 'Yes' : 'No' | trans({}, 'ZymUserBundle') }}<br />
+        </div>
+    </div>
+
+    <div class="page-header">
+        <h2>
+            Permissions
+            <small>What this user can do</small>
+        </h2>
+    </div>
+
+    <div class="row">
+        <div class="span6">
+            <h3>Groups</h3>
+
+            <ul class="unstyled">
+                {% for group in user.groups %}
+                    <li>{{ group.name |e }}</li>
+                {% endfor %}
+            </ul>
+
+            {% if not user.groups |length %}
+            <p>No groups assigned</p>
+            {% endif %}
+        </div>
+
+        <div class="span6">
+            <h3>Roles</h3>
+
+            <ul class="unstyled">
+                {% for role in user.roles %}
+                    <li>{{ role|e }}</li>
+                {% endfor %}
+            </ul>
+
+            {% if not user.roles |length %}
+            <p>No roles assigned</p>
+            {% endif %}
+        </div>
+    </div>
 {% endblock content %}
