--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <table class="striped-table">
+    <table class="table striped-table">
         <thead>
             <tr>
                 <th>#</th>
