--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
@@ -21,7 +21,7 @@
 
 
 
-    <table class="striped-table">
+    <table class="table striped-table">
         <thead>
             <tr>
                 <th>Name</th>
