--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclObjectAces/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclObjectAces/list.html.twig
@@ -22,7 +22,7 @@
     </h3>
     
     <h4>Class Aces</h4>
-    <table class="striped-table bordered-table">
+    <table class="table striped-table bordered-table">
         <thead>
             <tr>
                 <th>{{ 'Role' |trans({}, 'ZymSecurityBundle') }}</th>
@@ -66,7 +66,7 @@
     </table>
     
     <h4>Object Aces</h4>
-    <table class="striped-table bordered-table">
+    <table class="table striped-table bordered-table">
         <thead>
             <tr>
                 <th>{{ 'Role' |trans({}, 'ZymSecurityBundle') }}</th>
