--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/list.html.twig
@@ -13,17 +13,17 @@
     <div class="btn-toolbar">
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\UserBundle\\Entity\\User']) %}
-            <a class="btn" href="{{ path('zym_user_users_create') }}"><i class="plus"></i> {{ 'Add User' | trans({}, 'ZymUserBundle') }}</a>
+            <a class="btn" href="{{ path('zym_user_users_create') }}"><i class="icon plus"></i> {{ 'Add User' | trans({}, 'ZymUserBundle') }}</a>
             {% endif %}
         </div>
         <div class="btn-group">
-            <a class="btn" href="{{ path('zym_user_groups') }}"><i class="user"></i> {{ 'Groups' | trans({}, 'ZymUserBundle') }}</a>
+            <a class="btn" href="{{ path('zym_user_groups') }}"><i class="icon user"></i> {{ 'Groups' | trans({}, 'ZymUserBundle') }}</a>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{{ path('zym_user_groups_add') }}"><i class="plus"></i> {{ 'Add Group' | trans({}, 'ZymUserBundle') }}</a
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon plus"></i> {{ 'Add Group' | trans({}, 'ZymUserBundle') }}</a
                 </li>
             </ul>
         </div>
@@ -34,7 +34,7 @@
     </div>
 
 
-    <table class="striped-table">
+    <table class="table striped-table">
         <thead>
             <tr>
                 <th>#</th>
@@ -55,15 +55,15 @@
                 <td>
                     <div class="btn-group">
                         {% if is_granted('VIEW', user) %}
-                        <a class="btn" href="{{ path('zym_user_users_show', { 'id': user.id }) }}"><i class="share"></i> {{ 'View' | trans({}, 'ZymUserBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_user_users_show', { 'id': user.id }) }}"><i class="icon share"></i> {{ 'View' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
 
                         {% if is_granted('EDIT', user) %}
-                        <a class="btn" href="{{ path('zym_user_users_edit', { 'id': user.id }) }}"><i class="edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_user_users_edit', { 'id': user.id }) }}"><i class="icon edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
 
                         {% if is_granted('DELETE', user) %}
-                        <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal"><i class="remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal"><i class="icon remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
                         {% endif %}
                     </div>
                 </td>
