--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
@@ -12,13 +12,13 @@
 
     <div class="btn-toolbar">
         <div class="btn-group">
-            <a class="btn" href="{{ path('zym_user_users') }}"><i class="arrow-left"></i> Users</a>
+            <a class="btn" href="{{ path('zym_user_users') }}"><i class="icon arrow-left"></i> Users</a>
         </div>
 
         <div class="btn-group">
             {% if is_granted('EDIT', user) %}
             <a class="btn" href="{{ path('zym_user_users_edit', { "id": user.id }) }}">
-                <i class="edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}
+                <i class="icon edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}
             </a>
             {% endif %}
 
@@ -28,10 +28,10 @@
 
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{{ path('zym_user_groups_add') }}"><i class="off"></i> {{ 'Disable User' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon off"></i> {{ 'Disable User' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
                 <li>
-                    <a href="{{ path('zym_user_groups_add') }}"><i class="lock"></i> {{ 'Activate User' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon lock"></i> {{ 'Activate User' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
 
 
@@ -40,7 +40,7 @@
 
                 <li>
                     <a href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal">
-                        <i class="remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
+                        <i class="icon remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
                     </a>
                 </li>
                 {% endif %}
@@ -54,7 +54,7 @@
 
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{{ path('fos_user_resetting_request', { "username": user.username }) }}"><i class="envelope"></i> {{ 'Send password' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('fos_user_resetting_request', { "username": user.username }) }}"><i class="icon envelope"></i> {{ 'Send password' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
         <div class="btn-group">
             {% if is_granted('ROLE_ALLOWED_TO_SWITCH', user) %}
             <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id, "_switch_user": user.username }) }}">
-                <i class="user"></i> {{ 'Login as User' | trans({}, 'ZymUserBundle') }}
+                <i class="icon user"></i> {{ 'Login as User' | trans({}, 'ZymUserBundle') }}
             </a>
             {% endif %}
         </div>
