--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
@@ -1,21 +1,37 @@
 {% extends "ZymMenuBundle::layout.html.twig" %}
 
-{% block title %}{{ 'Edit Menu' | trans({}, 'RAPPBackendBundle') }}{% endblock %}
+{% block title %}{{ 'Edit Menu' | trans({}, 'ZymMenuBundle') }}{% endblock %}
 
 {% block content %}
     <div class="page-header">
         <h1>
-            {{ 'Edit Menu' | trans({}, 'ZymNodeBundle') |e }}
-            <small>{{ menu.label | trans({}, 'ZymNodeBundle') |e }}</small>
+            {{ 'Edit Menu' | trans({}, 'ZymMenuBundle') |e }}
+            <small>{{ menu.label | trans({}, 'ZymMenuBundle') |e }}</small>
         </h1>
     </div>
-    
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back();">
+                <i class="icon arrow-left"></i>
+                {{ 'Back' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
+
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\MenuBundle\\Entity\\Menu', 'identifier': menu.name }) }}">
+                <i class="icon lock"></i>
+                {{ 'Permissions' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
+    </div>
+
     <form action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
-    
+
         <fieldset class="form-actions">
             <input class="btn primary" type="submit" value="{{ 'Save changes' | trans({}, 'ZymMenuBundle') }}" />
-            <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</a>
+            <a class="btn" href="{{ path('zym_menus') }}">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</a>
         </fieldset>
     </form>
 {% endblock content %}
