--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
@@ -12,7 +12,10 @@
         <div class="btn-toolbar">
             <div class="btn-group pull-right">
                 {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\MenuBundle\\Entity\\Menu']) %}
-                <a class="btn" href="{{ path('zym_menus_add') }}">{{ 'New Menu' | trans({}, 'ZymMenuBundle') }}</a>
+                <a class="btn" href="{{ path('zym_menus_add') }}">
+                    <i class="icon plus"></i>
+                    {{ 'New Menu' | trans({}, 'ZymMenuBundle') }}
+                </a>
                 {% endif %}
             </div>
         </div>
@@ -21,7 +24,7 @@
 
 
 
-    <table class="table striped-table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Name</th>
@@ -38,15 +41,24 @@
                     <div class="description">{{ menu.description | raw }}</div>
                 </td>
                 <td>
-                    <div class="btn-group" style="width: 200px">
-                        <a class="btn" href="{{ path('zym_menus_show', { 'id': menu.name }) }}">{{ 'View' | trans({}, 'ZymMenuBundle') }}</a>
+                    <div class="btn-group" style="width: 300px">
+                        <a class="btn" href="{{ path('zym_menus_show', { 'id': menu.name }) }}">
+                            <i class="icon share"></i>
+                            {{ 'View' | trans({}, 'ZymMenuBundle') }}
+                        </a>
 
                         {% if is_granted('EDIT', menu) %}
-                        <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">{{ 'Edit' | trans({}, 'ZymMenuBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">
+                            <i class="icon edit"></i>
+                            {{ 'Edit' | trans({}, 'ZymMenuBundle') }}
+                        </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', menu) %}
-                        <a class="btn" href="{{ path('zym_menus_delete', { 'id': menu.name }) }}" data-toggle="ajax-modal">{{ 'Delete' | trans({}, 'ZymMenuBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_menus_delete', { 'id': menu.name }) }}" data-toggle="ajax-modal">
+                            <i class="icon remove"></i>
+                            {{ 'Delete' | trans({}, 'ZymMenuBundle') }}
+                        </a>
                         {% endif %}
                     </div>
                 </td>
