--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/show.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/show.html.twig
@@ -25,29 +25,63 @@
             <small>{{ menu.name | trans({}, 'ZymNodeBundle') |e }}</small>
         </h1>
     </div>
-    
-    <div class="btn-group">        
-        {% if is_granted('EDIT', menu) %}
-        <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">{{ 'Edit' | trans({}, 'ZymMenuBundle') }}</a>
-        {% endif %}
 
-        {% if is_granted('DELETE', menu) %}
-        <a class="btn" href="{{ path('zym_menus_delete', { 'id': menu.name }) }}">{{ 'Delete' | trans({}, 'ZymMenuBundle') }}</a>
-        {% endif %}
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back();">
+                <i class="icon arrow-left"></i>
+                {{ 'Back' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
+
+        <div class="btn-group">
+            {% if is_granted('EDIT', menu) %}
+            <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">
+                <i class="icon edit"></i>
+                {{ 'Edit' | trans({}, 'ZymMenuBundle') }}
+            </a>
+            {% endif %}
+
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu">
+
+                {% if is_granted('DELETE', menu) %}
+                <li class="divider"></li>
+
+                <li>
+                    <a href="{{ path('zym_menus_delete', { 'id': menu.name }) }}" data-toggle="ajax-modal">
+                        <i class="icon remove"></i>
+                        {{ 'Delete' | trans({}, 'ZymMenuBundle') }}
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\MenuBundle\\Entity\\Menu', 'identifier': menu.name }) }}">
+                <i class="icon lock"></i>
+                {{ 'Permissions' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
     </div>
-    
+
+
     <div class="description">
         {{ menu.description | raw }}
     </div>
 
     <h3>Menu Items</h3>
-    
+
     <div class="btn-group">
         {% if is_granted('EDIT', menu) and is_granted('CREATE', ['class', 'Zym\\Bundle\\MenuBundle\\Entity\\MenuItem']) %}
         <a href="{{ path('zym_menus_item_add', { 'id': menu.name }) }}" class="btn">{{ 'Add Menu Item' | trans({}, 'ZymMenuBundle') }}</a>
         {% endif %}
     </div>
-    
+
     <ul>
         {% for menuItem in  menu.children %}
         <li>
