--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
@@ -9,10 +9,33 @@
             <small>{{ nodeType.name | trans }}</small>
         </h1>
     </div>
-    
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_node_node_types') }}">
+                <i class="icon arrow-left"></i>
+                {{ 'Content Types' | trans({}, 'ZymNodeBundle') }}
+            </a>
+        </div>
+
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_field_fields', { "fieldConfigType": "Zym\\Bundle\\NodeBundle\\Entity\\NodeFieldConfig"}) }}">
+                <i class="icon list"></i>
+                {{ 'Manage Fields' | trans({}, 'ZymNodeBundle') }}
+            </a>
+        </div>
+
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\NodeBundle\\Entity\\NodeType', 'identifier': nodeType.type }) }}">
+                <i class="icon lock"></i>
+                {{ 'Permissions' | trans({}, 'ZymNodeBundle') }}
+            </a>
+        </div>
+    </div>
+
     <form action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
-    
+
         <fieldset class="form-actions">
             <input type="submit" value="{{ 'Save changes' | trans({}, 'ZymNodeBundle') }}" class="btn primary" />
             <a class="btn" href="{{ path('zym_node_node_types') }}">Cancel</a>
