--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
@@ -9,10 +9,19 @@
             <small>{{ aclClass.classType |e }}</small>
         </h1>
     </div>
-    
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back();">
+                <i class="icon arrow-left"></i>
+                {{ 'Back' | trans({}, 'ZymSecurityBundle') }}
+            </a>
+        </div>
+    </div>
+
     <form action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
-    
+
         <fieldset class="form-actions">
             <input type="submit" value="{{ 'Save changes' | trans({}, 'ZymSecurityBundle') }}" class="btn primary" />
             <a class="btn" href="{{ path('zym_security_acl_entries') }}">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</a>
