--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclObjectAces/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclObjectAces/list.html.twig
@@ -9,20 +9,32 @@
             <small>{{ 'Manage permissions' | trans({}, 'ZymSecurityBundle') }}
         </h1>
     </div>
-    
-    <div class="btn-group">
-        {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclClass']) %}
-        <a  class="btn" href="{{ path('zym_security_acl_entries_add') }}">{{ 'New Role' | trans({}, 'ZymSecurityBundle') }}</a>
-        {% endif %}
+
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back();">
+                <i class="icon arrow-left"></i>
+                {{ 'Back' | trans({}, 'ZymSecurityBundle') }}
+            </a>
+        </div>
+
+        <div class="btn-group">
+            {% if is_granted('MASTER', oid) %}
+            <a  class="btn" href="{{ path('zym_security_acl_entries_add', { "classType": oid.type }) }}">
+                <i class="icon plus"></i>
+                {{ 'New Permission' | trans({}, 'ZymSecurityBundle') }}
+            </a>
+            {% endif %}
+        </div>
     </div>
-    
+
     <h3>
         {{ oid.type }}
         <small>{{ oid.identifier }}</small>
     </h3>
-    
+
     <h4>Class Aces</h4>
-    <table class="table striped-table bordered-table">
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>{{ 'Role' |trans({}, 'ZymSecurityBundle') }}</th>
@@ -36,7 +48,7 @@
                 <th>{{ 'Actions' |trans({}, 'ZymSecurityBundle') }}</th>
             </tr>
         </thead>
-        
+
         <tbody>
                 {% for aceOrder, ace in acl.classAces %}
                 <tr>
@@ -51,12 +63,21 @@
                     <td>
                         <div class="btn-group">
                             {% if is_granted('VIEW', oid.type) %}
-                            <a class="btn" href="">{{ 'View' |trans({}, 'ZymSecurityBundle') }}</a>
+                            <a class="btn" href="">
+                                <i class="icon share"></i>
+                                {{ 'View' |trans({}, 'ZymSecurityBundle') }}
+                            </a>
                             {% endif %}
-                            
+
                             {% if is_granted('OPERATOR', oid.type) %}
-                            <a class="btn" href="{{ path('zym_security_acl_entries_edit', { 'classType': oid.type, 'index': aceOrder }) }}">{{ 'Edit' |trans({}, 'ZymSecurityBundle') }}</a>
-                            <a class="btn" href="" data-toggle="ajax-modal">{{ 'Delete' |trans({}, 'ZymSecurityBundle') }}</a>
+                            <a class="btn" href="{{ path('zym_security_acl_entries_edit', { 'classType': oid.type, 'index': aceOrder }) }}">
+                                <i class="icon edit"></i>
+                                {{ 'Edit' |trans({}, 'ZymSecurityBundle') }}
+                            </a>
+                            <a class="btn" href="" data-toggle="ajax-modal">
+                                <i class="icon remove"></i>
+                                {{ 'Delete' |trans({}, 'ZymSecurityBundle') }}
+                            </a>
                             {% endif %}
                         </div>
                     </td>
@@ -64,9 +85,9 @@
                 {% endfor %}
         </tbody>
     </table>
-    
+
     <h4>Object Aces</h4>
-    <table class="table striped-table bordered-table">
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>{{ 'Role' |trans({}, 'ZymSecurityBundle') }}</th>
@@ -80,7 +101,7 @@
                 <th>{{ 'Actions' |trans({}, 'ZymSecurityBundle') }}</th>
             </tr>
         </thead>
-        
+
         <tbody>
                 {% for aceOrder, ace in acl.objectAces %}
                 <tr>
@@ -103,17 +124,25 @@
                     <td>
                         <div class="btn-group">
                             {% if is_granted('VIEW', oid.type) %}
-                            <a class="btn" href="">{{ 'View' |trans({}, 'ZymSecurityBundle') }}</a>
+                            <a class="btn" href="">
+                                <i class="icon share"></i>
+                                {{ 'View' |trans({}, 'ZymSecurityBundle') }}</a>
                             {% endif %}
-                            
+
                             {% if is_granted('OPERATOR', oid.type) %}
-                            <a class="btn" href="{{ path('zym_security_acl_entries_edit', { 'classType': oid.type, 'index': aceOrder }) }}">{{ 'Edit' |trans({}, 'ZymSecurityBundle') }}</a>
-                            <a class="btn" href="" data-toggle="ajax-modal">{{ 'Delete' |trans({}, 'ZymSecurityBundle') }}</a>
+                            <a class="btn" href="{{ path('zym_security_acl_entries_edit', { 'classType': oid.type, 'index': aceOrder }) }}">
+                                <i class="icon edit"></i>
+                                {{ 'Edit' |trans({}, 'ZymSecurityBundle') }}
+                            </a>
+                            <a class="btn" href="" data-toggle="ajax-modal">
+                                <i class="icon remove"></i>
+                                {{ 'Delete' |trans({}, 'ZymSecurityBundle') }}
+                            </a>
                             {% endif %}
                         </div>
                     </td>
                 </tr>
                 {% endfor %}
         </tbody>
-    </table>    
+    </table>
 {% endblock content %}
