--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/list.html.twig
@@ -29,12 +29,15 @@
     <div class="btn-toolbar">
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclSecurityIdentity']) %}
-            <a  class="btn" href="{{ path('zym_security_acl_roles_add') }}">{{ 'New Role' | trans({}, 'ZymSecurityBundle') }}</a>
+            <a  class="btn" href="{{ path('zym_security_acl_roles_add') }}">
+                <i class="icon plus"></i>
+                                {{ 'New Role' | trans({}, 'ZymSecurityBundle') }}
+            </a>
             {% endif %}
         </div>
     </div>
 
-    <table class="table striped-table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>#</th>
@@ -53,7 +56,10 @@
                 <td>
                     <div class="btn-group">
                         {% if is_granted('DELETE', role) %}
-                        <a class="btn" href="{{ path('zym_security_acl_roles_delete', { 'id': role.id })}}" data-toggle="ajax-modal">{{ 'Delete' |trans({}, 'ZymSecurityBundle') }}</a>
+                        <a class="btn" href="{{ path('zym_security_acl_roles_delete', { 'id': role.id })}}" data-toggle="ajax-modal">
+                            <i class="icon remove"></i>
+                            {{ 'Delete' |trans({}, 'ZymSecurityBundle') }}
+                        </a>
                         {% endif %}
                     </div>
                 </td>
